--- a/CSS/style.css
+++ b/CSS/style.css
@@ -45,7 +45,7 @@ button {
     transition: background-color 0.3s;
     font-size: 18px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    box-shadow: 0 4pxx 8px 2px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 4px 8px 2px rgba(0, 0, 0, 0.4);
 }
 
 button:hover {
@@ -141,4 +141,77 @@ button:hover {
     width: 100%;
     max-width: 700px;
     height: auto;
+}
+
+@media only screen and (max-width: 767px) {
+    .pcontainer {
+        display: flex;
+        flex-direction: column;
+    }
+    .container {
+        width: 100%;
+        padding: 10px;
+        display: flex;
+        justify-content: center;
+    }
+    .img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .item {
+        max-width: 100%;
+        margin: 10px auto;
+        
+    }
+
+    #respuesta {
+        max-width: 80%;
+        width: 70px;
+        margin: 20px auto;
+        background-color: #B273BA;
+        border-radius: 10px;
+        text-align: center;
+        position: relative;
+        padding: 15px;
+        font-size: 14px;
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+        opacity: 0.8;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+    .container {
+        width: 100%;
+        padding: 15px;
+    }
+
+    .img {
+        max-width: 80%;
+    }
+    #respuesta {
+        margin: 20px auto;
+        font-size: 14px;
+        text-align: center;
+        max-width: 60%;
+        width: 70px;
+        opacity: 0.8;
+        background-color: #B273BA;
+        border-radius: 10px;
+        position: relative;
+        padding: 15px;
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    }
+}
+
+@media only screen and (min-width: 1025px) {
+    body {
+        font-size: 18px;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    body {
+        font-size: 20px;
+    }
 }
